# inno-updater

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  OSS.md  OSSREADME.json  README.md  appveyor.yml  azure-pipelines.yml  build.rs  cargo-build.bat  cargo-run.bat  enable-visual-styles.bat  main.manifest  travis.yml
.cargo/: config
.github/workflows/: ci.yml
resources/: main.manifest  resources.rc  resources.rc.template
src/: blockio.rs  gui.rs  handle.rs  main.rs  model.rs  process.rs  resources.rs  strings.rs  util.rs
src/model/: filerec.rs  header.rs  mod.rs
tools/legal/: main.js  package-lock.json  package.json
