[package]
name = "inno_updater"
version = "0.1.2"
authors = ["Microsoft <monacotools@microsoft.com>"]

[dependencies]
byteorder = "1"
crc = "^1.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3.3", features = ["winuser", "libloaderapi", "commctrl", "processthreadsapi"] }

[profile.release]
lto = true
panic = 'abort'