[package]
name = "inno_updater"
version = "0.9.0"
authors = ["Microsoft <monacotools@microsoft.com>"]
build = "build.rs"

[dependencies]
byteorder = "1"
crc = "^1.0.0"
slog = "2.1.1"
slog-async = "2.2.0"
slog-term = "2.3.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.42"
features = [
    "Win32_Foundation",
    "Win32_System_Shutdown",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp"
]

[profile.release]
lto = true
panic = 'abort'
